--- a/src/LandingPage/styles/LandingPage.css
+++ b/src/LandingPage/styles/LandingPage.css
@@ -6,9 +6,16 @@
 #Leadership{
   background-color: #000000;
 }
+#Leadership h3{
+  color: #f5f5f5;
+}
 
 #Stats i {
   font-size:3rem!important;
+}
+
+#JoinUs h6{
+     font-size: 2rem;
 }
 
 
@@ -26,9 +33,8 @@ z-index: 0;
 }
 
 .image--cover {
-    width: 10rem;
-    height: 10rem;
-    border: #fff 3px solid;
+    width: 8rem;
+    height: 8rem;
     border-radius: 50%;
     object-fit: cover;
     object-position: center;
