Footer Kofi Info

--- a/src/LandingPage/styles/LandingPage.css
+++ b/src/LandingPage/styles/LandingPage.css
@@ -77,7 +77,7 @@ z-index: 0;
 .button-twitter,
 .button-whatsapp {
     padding: 5px;
-    font-size: 30pt;
+    font-size: 2rem;
 }
 .button-facebook {
     color: #3C5A99;
