--- a/src/LandingPage/styles/LandingPage.css
+++ b/src/LandingPage/styles/LandingPage.css
@@ -4,7 +4,10 @@
 }
 
 #Leadership{
-  background-color: #000000;
+  background:linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)), url('../../images/Baffie.jpg');
+  background-position:center;
+  background-repeat:no-repeat;
+  background-size:cover;
 }
 #Leadership h3{
   color: #f5f5f5;
